5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1595_1016.log
== TEST (2019-04-01 23:41:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = ((a+b+c)/2)
A = math, sqrt(a*(a-a)*(a-b)*(a-c))
print(round(A,5))
-- ERROR:
File "XXXX", line 4
    from math
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:42:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = ((a+b+c)/2)
A = math, sqrt(a*(a-a)*(a-b)*(a-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = math, sqrt(a*(a-a)*(a-b)*(a-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:42:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = ((a+b+c)/2)
A = math, sqrt(a*(a-a)*(a-b)*(a-c))
print(round(A,5))
-- EXECUTION TIME:
0.264433
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt(a*(a-a)*(a-b)*(a-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:42:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = ((a+b+c)/2)
A = math, sqrt(s*(a-a)*(a-b)*(a-c))
print(round(A,5))
-- EXECUTION TIME:
0.227584
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt(s*(a-a)*(a-b)*(a-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:42:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = ((a+b+c)/2)
A = math, sqrt(s*(a-a)*(a-b)*(a-c))
print(round(A,5))
-- EXECUTION TIME:
0.163983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt(s*(a-a)*(a-b)*(a-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:43:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = ((a+b+c)/2)
A = math, sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.150382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:43:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = ((a+b+c)/2)
A = math, sqrt (s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.20777
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt (s*(s-a)*(s-b)*(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:44:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = ((a+b+c)/2)
A = math, sqrt (s*(s-a)*(a-b)*(s-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = math, sqrt (s*(s-a)*(a-b)*(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:44:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = ((a+b+c)/2)
A = math, sqrt (s*(s-a)*(a-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.188031
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt (s*(s-a)*(a-b)*(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:44:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = (a+b+c)/2
A = math, sqrt (s*(s-a)*(a-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.214197
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt (s*(s-a)*(a-b)*(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:46:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = (a+b+c)/2
A = math, sqrt (s*(s-a)+(s-b)+(s-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = math, sqrt (s*(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:46:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = (a+b+c)/2
A = math, sqrt (s*(s-a)+(s-b)+(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.189972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt (s*(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:46:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = (a+b+c)/2
A = math, sqrt (s+(s-a)+(s-b)+(s-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = math, sqrt (s+(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:46:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input('valor de a'))
b = float(input('valor de b'))	  
c = float(input('valor de c'))
s = (a+b+c)/2
A = math, sqrt (s+(s-a)+(s-b)+(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.222389
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt (s+(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:52:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = (a+b+c)/2
A = math, sqrt (s+(s-a)+(s-b)+(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.157285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math, sqrt (s+(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:00:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = (a+b+c)/2
A = math , sqrt(s+(s-a)+(s-b)+(s-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = math , sqrt(s+(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:00:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = (a+b+c)/2
A = math , sqrt(s+(s-a)+(s-b)+(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.152486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = math , sqrt(s+(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:01:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = (a+b+c)/2
A = sqrt(s+(s-a)+(s-b)+(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.125846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 9, in <module>
    A = sqrt(s+(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:14:59) 
-- CODE:
16
12
print(16*12)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:15:58) 
-- CODE:
love = Tae
passion = Kook
print(love+passion)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    love = Tae
NameError: name 'Tae' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:16:24) 
-- CODE:
love = 'Tae'
passion = 'Kook'
print(love+passion)
-- OUTPUT:
TaeKook
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:18:47) 
-- CODE:
Tae = 'love is'
Kook = 'mutual'
What is Taekook = love + passion
print(What is Taekook)
-- ERROR:
File "XXXX", line 3
    What is Taekook = love + passion
    ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:19:15) 
-- CODE:
Tae = 'love is'
Kook = 'mutual'
WhatisTaekook = love + passion
print(WhatisTaekook)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    WhatisTaekook = love + passion
NameError: name 'love' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:19:38) 
-- CODE:
Tae = 'love is'
Kook = 'mutual'
WhatisTaekook = Tae + Kook
print(WhatisTaekook)
-- OUTPUT:
love ismutual
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:19:46) 
-- CODE:
Tae = 'love is'
Kook = ' mutual'
WhatisTaekook = Tae + Kook
print(WhatisTaekook)
-- OUTPUT:
love is mutual
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:25:43) 
-- CODE:
leader = 'Namjoon'
handsome = 'Jin'
cat = 'Suga'
sunshine = 'Hope'
cute = 'Jimin'
babe = 'Taehyung'
maknae = 'Jungkook'
BTS = (laeder+handsome+cat+sunshine+cute+babe+maknae)
print(BTS)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    BTS = (laeder+handsome+cat+sunshine+cute+babe+maknae)
NameError: name 'laeder' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:26:01) 
-- CODE:
leader = 'Namjoon'
handsome = 'Jin'
cat = 'Suga'
sunshine = 'Hope'
cute = 'Jimin'
babe = 'Taehyung'
maknae = 'Jungkook'
BTS = (leader+handsome+cat+sunshine+cute+babe+maknae)
print(BTS)
-- OUTPUT:
NamjoonJinSugaHopeJiminTaehyungJungkook
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:27:27) 
-- CODE:
leader = 'Namjoon loves '
handsome = 'Jin that loves '
cat = 'Suga that loves '
sunshine = 'Hope that loves '
cute = 'Jimin that loves '
babe = 'Taehyung that loves '
maknae = 'Jungkook that loves hyungs'
BTS = (leader+handsome+cat+sunshine+cute+babe+maknae)
print(BTS)
-- OUTPUT:
Namjoon loves Jin that loves Suga that loves Hope that loves Jimin that loves Taehyung that loves Jungkook that loves hyungs
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:31:44) 
-- CODE:
JK = (2019 - 1997)
TH = (2019 - 1995)
JM = (2019 - 1995)
NJ = (2019 - 1994)
HS = (2019 - 1994)
YG = (2019 - 1993)
SJ = (2019 - 1992)
print(JK) print(TH)
-- ERROR:
File "XXXX", line 8
    print(JK) print(TH)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:31:59) 
-- CODE:
JK = (2019 - 1997)
TH = (2019 - 1995)
JM = (2019 - 1995)
NJ = (2019 - 1994)
HS = (2019 - 1994)
YG = (2019 - 1993)
SJ = (2019 - 1992)
print(JK)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:33:51) 
-- CODE:
JK = (2019 - 1997)
TH = (2019 - 1995)
JM = (2019 - 1995)
NJ = (2019 - 1994)
HS = (2019 - 1994)
YG = (2019 - 1993)
SJ = (2019 - 1992)
print(JK)
print(TH)
print(JM)
print(NJ)
print(HS)
print(YG)
print(SJ)
-- OUTPUT:
22
24
24
25
25
26
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:36:36) 
-- CODE:
inequacao = 3x - 2 > 4 - x
print(inequacao)
-- ERROR:
File "XXXX", line 1
    inequacao = 3x - 2 > 4 - x
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:37:02) 
-- CODE:
inequacao = 3 - 2 > 4 - x
print(inequacao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    inequacao = 3 - 2 > 4 - x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:38:53) 
-- CODE:
proposta = input('digite 'ver proposta'')

-- ERROR:
File "XXXX", line 1
    proposta = input('digite 'ver proposta'')
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:39:19) 
-- CODE:
proposta = input('digite "ver proposta" ')

-- ERROR:
File "XXXX", line 1
    proposta = input('digite 'ver proposta'')
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:40:43) 
-- CODE:
proposta = input('digite "ver proposta" ')
if input = "ver proposta" else "casa comigo?"
-- ERROR:
File "XXXX", line 2
    if input = "ver proposta" else "casa comigo?"
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:40:54) 
-- CODE:
proposta = input('digite "ver proposta" ')
if input "ver proposta" else "casa comigo?"
-- ERROR:
File "XXXX", line 2
    if input "ver proposta" else "casa comigo?"
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:41:08) 
-- CODE:
proposta = input('digite "ver proposta" ')
if input ver proposta else "casa comigo?"
-- ERROR:
File "XXXX", line 2
    if input ver proposta else "casa comigo?"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:41:55) 
-- CODE:
proposta = input('digite "ver proposta" ')
if "ver proposta" else "casa comigo?"
-- ERROR:
File "XXXX", line 2
    if "ver proposta" else "casa comigo?"
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:42:50) 
-- CODE:
proposta = input('digite "ver proposta" ')
if (input == "ver proposta") else "casa comigo?"
-- ERROR:
File "XXXX", line 2
    if (input == "ver proposta") else "casa comigo?"
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:43:19) 
-- CODE:
proposta = input('digite "ver proposta" ')
if (input == "ver proposta"): else "casa comigo?"
-- ERROR:
File "XXXX", line 2
    if (input == "ver proposta"): else "casa comigo?"
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:45:10) 
-- CODE:
proposta = input('digite "ver proposta" ')

-- ERROR:
File "XXXX", line 2
    if (input == "ver proposta"): else "casa comigo?"
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:45:58) 
-- CODE:
proposta = input('digite "verproposta" ')
verproposta = 'marry me?'
-- ERROR:
File "XXXX", line 2
    if (input == "ver proposta"): else "casa comigo?"
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:46:22) 
-- CODE:
proposta = input('digite "verproposta" ')
verproposta = 'marry me?'
print(verproposta)
-- OUTPUT:
marry me?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:47:39) 
-- CODE:
proposta = input('digite "ver" ')
ver = 'marry me?'
print(ver)
-- OUTPUT:
marry me?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:48:06) 
-- CODE:
input('digite "ver" ')
ver = 'marry me?'
print(ver)
-- OUTPUT:
marry me?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:48:37) 
-- CODE:
input(proposta 'digite "ver" ')
ver = 'marry me?'
print(ver)
-- ERROR:
File "XXXX", line 1
    input(proposta 'digite "ver" ')
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:49:13) 
-- CODE:
input('proposta 'digite "ver" '')
ver = 'marry me?'
print(ver)
-- ERROR:
File "XXXX", line 1
    input('proposta 'digite "ver" '')
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:53:07) 
-- CODE:
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = (a+b+c)/2
A = sqrt(s+(s-a)+(s-b)+(s-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A = sqrt(s+(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:53:12) 
-- CODE:
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = (a+b+c)/2
A = sqrt(s+(s-a)+(s-b)+(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.199307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 6, in <module>
    A = sqrt(s+(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:48:35) 
-- CODE:
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = (a+b+c)/2
A = sqrt(s+(s-a)+(s-b)+(s-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A = sqrt(s+(s-a)+(s-b)+(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:51:28) 
-- CODE:
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = ((a+b+c)/2)
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.151064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 6, in <module>
    A = sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:51:30) 
-- CODE:
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = ((a+b+c)/2)
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A = sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:53:01) 
-- CODE:
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = ((a+b+c)/2)
A = sqrt(s*(8-a)*(8-b)*(8-c))
print(round(A,5))
-- EXECUTION TIME:
0.124976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 6, in <module>
    A = sqrt(s*(8-a)*(8-b)*(8-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:53:06) 
-- CODE:
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = ((a+b+c)/2)
A = sqrt(8*(8-a)*(8-b)*(8-c))
print(round(A,5))
-- EXECUTION TIME:
0.131995
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 6, in <module>
    A = sqrt(8*(8-a)*(8-b)*(8-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:53:32) 
-- CODE:
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
8 = ((a+b+c)/2)
A = sqrt(8*(8-a)*(8-b)*(8-c))
print(round(A,5))
-- EXECUTION TIME:
0.144223
-- ERROR:
  File "/home/codebench/codes/1595/1016/main.py", line 5
    8 = ((a+b+c)/2)
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:53:53) 
-- CODE:
import math
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = ((a+b+c)/2)
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.156145
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 6, in <module>
    A = sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 23:56:14) 
-- CODE:
from math import *
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = ((a+b+c)/2)
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 23:56:30) 
-- CODE:
from math import *
a = float(input("valor de a"))
b = float(input("valor de b"))	  
c = float(input("valor de c"))
s = ((a+b+c)/2)
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.157956
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
